--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/router": "^16.0.0",
     "@capacitor/android": "5.4.2",
     "@capacitor/app": "5.0.6",
-    "@capacitor/core": "5.4.2",
+    "@capacitor/core": "^5.5.1",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
@@ -43,7 +43,7 @@
     "@angular/cli": "16.2.5",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
-    "@capacitor/cli": "5.4.2",
+    "@capacitor/cli": "^5.4.2",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
